# subprocessing

./: README.md  pyproject.toml  setup.cfg
subprocessing/: __init__.py  __main__.py  pool.py  process.py  worker.py
