[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subprocessing"
version = "0.2.0"
authors = [
  { name="Peter Schneider-Kamp" }
]

description = "A subprocess-based reimplementation of parts of Python's multiprocessing library."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'dill',
]

[project.urls]
"Homepage" = "https://github.com/schneiderkamplab/subprocessing"
"Bug Tracker" = "https://github.com/schneiderkamplab/subprocessing/issues"

[tool.hatch.build]
include = [
    'subprocessing',
    'LICENSE',
    'README.md',
]
